# vnsearch-engine

./: .gitignore  CLAUDE.md  README.md
deploy/: build_all.sh
docs/common/: PRD.md  cosine_similarity.md  tf_idf_algorithm.md
docs/irs_api/: 2026_02_16_0845_IMPLEMENTATION_ROADMAP.md  API_DOCUMENTATION.md  PROJECT_STRUCTURE.md
docs/irs_web/: 2026_02_16_2040_IMPL.md  IDEA.md
docs/report/: 1_tong_quan.md  (+4 more)
microservices/irs_api/: .dockerignore  .env  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  main.py  pyproject.toml
microservices/irs_api/app/: __init__.py
microservices/irs_api/app/api/v1/: dependencies.py  health.py  ingest.py  search.py
microservices/irs_api/app/core/: config.py
microservices/irs_api/app/models/: request.py  response.py
microservices/irs_api/app/services/: ingestion_service.py  nlp_processor.py  qdrant_service.py  tfidf_service.py
microservices/irs_api/app/utils/: excel_loader.py  stopwords_loader.py
microservices/irs_api/assets/excel/: articles.xlsx  categories.xlsx
microservices/irs_api/models/: .gitkeep  tfidf_vectorizer.pkl
microservices/irs_api/scripts/: initial_ingest.py
microservices/vnexpress_crawler/: .dockerignore  .env  .gitignore  DATA_COLLECTION_PLAN.md  Dockerfile  README.md  RESEARCH.md  SCRAPER_SETUP.md  TEST_ENDPOINT.md  config.py  main.py  pyproject.toml  render.yaml
microservices/vnexpress_crawler/app/: __init__.py
microservices/vnexpress_crawler/app/assets/json/: categories.json
microservices/vnexpress_crawler/app/models/: __init__.py  article.py  category.py  comment.py  error.py  health.py
microservices/vnexpress_crawler/app/routers/: articles.py  categories.py  health.py
microservices/vnexpress_crawler/app/services/: article_service.py  category_service.py  scraper_service.py
microservices/vnexpress_crawler/app/utils/: cache.py  category_lookup.py  http_client.py
setup/: QDRANT_GUIDE.md  README.md  docker-compose.yml  start.sh
(+37 files in other folders)
